# retail-streaming-lakehouse

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.mmd
infra/trino/catalog/: iceberg.properties
sql/: orders_by_minute.sql
src/retail_streaming/: __init__.py  generator.py  models.py  producer.py  stream_job.py
tests/: test_models.py
