[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retail-streaming-lakehouse"
version = "0.1.0"
description = "A small Kafka-to-Iceberg streaming pipeline for retail orders"
authors = [{ name = "Alim Narmamatov" }]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "confluent-kafka>=2.6,<3",
  "pydantic>=2.9,<3",
]

[project.optional-dependencies]
spark = ["pyspark>=3.5,<4"]
dev = ["pytest>=8,<9", "ruff>=0.9,<1"]

[tool.hatch.build.targets.wheel]
packages = ["src/retail_streaming"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
